feat: Internationalisation complète FR/EN
Système i18n:
- next-intl configuré avec middleware et structure [locale]
- Routes FR (/fr) et EN (/en) avec FR par défaut
- Dictionnaires messages/fr.json et messages/en.json

Composants traduits:
- Header avec navigation + Language Switcher (🌐 FR/EN)
- Footer avec tous les textes
- ProjectsPageClient (titre, filtres, catégories, technologies, compteurs)
- HomeHero (titre, description, CTA)
- ProjectCard (badges Featured + statuts traduits)
- ProjectsGrid (titres traduits côté parent)

Features:
- Language Switcher visible en haut à droite (desktop + mobile)
- Switch entre /fr et /en préserve la page actuelle
- Affiche langue ACTUELLE (FR quand en FR, EN quand en EN)
- Tous textes UI traduits (sauf contenu projets MDX)

Projets:
- 7 projets créés avec statuts (En cours/Stand-By/Terminé)
- Badges status colorés (bleu/orange/vert)
- 4 projets featured sur page d'accueil

--- a/content/projects/template-ecs.mdx
+++ b/content/projects/template-ecs.mdx
@@ -5,6 +5,7 @@ date: "2025-11-15"
 category: "école"
 tags: ["C++", "ECS", "Game Engine", "SFML", "Architecture"]
 featured: true
+status: "terminé"
 github: "https://github.com/Kikii95/template-ECS"
 thumbnail: "/images/projects/ecs-thumbnail.jpg"
 ---
