--- a/content/projects/portfolio-nextjs.mdx
+++ b/content/projects/portfolio-nextjs.mdx
@@ -4,7 +4,7 @@ description: "Portfolio moderne en Next.js 14 avec système MDX pour projets et 
 date: "2025-11-27"
 category: "perso"
 tags: ["Next.js", "TypeScript", "React", "TailwindCSS", "Framer Motion"]
-featured: true
+featured: false
 status: "en-cours"
 github: "https://github.com/Kikii95/portfolio-gamedev"
 thumbnail: "/images/projects/portfolio.jpg"
