feat: Complete project pages system with download links
Features:
- Dynamic project routes with MDX rendering
- Steam-style gallery carousel with thumbnails
- Project detail pages with hero, sidebar, modal
- Build download links support (itch.io, GitHub Releases)
- Full FR/EN translations for About and Contact pages
- Improved markdown styles with syntax highlighting
- Framer Motion animations throughout

Components:
- ProjectDetail: Hero backdrop blur, 2-column layout, sticky sidebar
- ProjectGallery: Steam-style carousel with fullscreen support
- Dialog and Carousel UI components

Metadata:
- Added buildUrl field for playable builds
- Added gallery field for image/video carousels
- Support for status badges (en-cours, stand-by, terminé)

--- a/content/projects/template-ecs.mdx
+++ b/content/projects/template-ecs.mdx
@@ -7,7 +7,9 @@ tags: ["C++", "ECS", "Game Engine", "SFML", "Architecture"]
 featured: true
 status: "terminé"
 github: "https://github.com/Kikii95/template-ECS"
+buildUrl: "https://github.com/Kikii95/template-ECS/releases/latest"
 thumbnail: "/images/projects/ecs-thumbnail.jpg"
+gallery: ["/images/projects/ecs-thumbnail.jpg", "/images/projects/ecs-thumbnail.jpg", "/images/projects/ecs-thumbnail.jpg"]
 ---
 
 # Template ECS - Moteur de Jeu Universel
@@ -36,8 +38,6 @@ Projet école développé pour le cours de Jeu Libre. Objectif : créer un moteu
 ## 🎮 Démo Incluse
 
 **Pirate Space Explorer** : Jeu de démonstration complet utilisant le moteur.
-
-## 🔗 Liens
 
 - [GitHub Repository](https://github.com/Kikii95/template-ECS)
 - [Documentation Technique](https://github.com/Kikii95/template-ECS/blob/main/ANALYSE-RAPPORT.md)
